Fix about page minor layout issues

--- a/source/stylesheets/components/_curved-section.scss
+++ b/source/stylesheets/components/_curved-section.scss
@@ -174,6 +174,7 @@
 	}
 }
 
+.curved-section--faq-contact .curved-section__title,
 .curved-section--ue .curved-section__title {
 	color: palette('orange');
 }
